webook_project/webook/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/mysql
              #我POD里面有那么多volumes，要用哪个
              name: mysql-storage
          ports:
            - containerPort: 3306
              protocol: TCP
      restartPolicy: Always
      #我整个POD有哪些 就是这个name和上面那个name要对应上
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
