webook_project/webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  #副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
# template描述的是你的POD是什么样子的
  template:
    metadata:
      name: webook
      labels:
        app: webook
    spec:
      containers:
        - name: webook
          image: darling/webook:v0.0.1
          ports:
            - containerPort: 9090
          imagePullPolicy: Always
