webook_project/webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      port: 11479
      targetPort: 6379
      #nodePort: 30003
  type: LoadBalancer
  #type: NodePort
